--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,26 +1,33 @@
-name: Release
-
+- name: Publish
+  uses: svenstaro/upload-release-action@2.9.0
+            
 on:
   push:
-    branches: [ "main" ]
+    tags:
+      - '*'
 
 jobs:
-  pre-release:
-    name: "Release"
-    runs-on: ubuntu-latest
+  publish:
+    name: Publish for ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            artifact_name: mos6502
+            asset_name: mos6502-linux-amd64
+          - os: windows-latest
+            artifact_name: mos6502.exe
+            asset_name: mos6502-windows-amd64
 
     steps:
-    - uses: "actions/checkout@v3"
-    - name: "Build"
-      run: make workflow
-
-    - uses: "marvinpinto/action-automatic-releases@latest"
+    - uses: actions/checkout@v3
+    - name: Build
+      run: make
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
-        prerelease: true
-        title: "Development Release"
-        files: |
-          ./mos6502
-          ./mos6502.exe
-          ./README.md
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: target/release/${{ matrix.artifact_name }}
+        asset_name: ${{ matrix.asset_name }}
+        tag: ${{ github.ref }}
